--- a/Sprint2/Algoritmos/Tela_Perfil/style.css
+++ b/Sprint2/Algoritmos/Tela_Perfil/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Open Sans";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:#FFFFFF;
   }
   /* classes dos campos de inserção de dados */
@@ -15,10 +15,12 @@ body {
   }
   .camposCima{
     display: flex;
+    justify-content: space-around;
     margin: 50px;
   }
   .camposBaixo{
     display:flex;
+    justify-content: space-around;
     margin: 50px;
   }
   .nomeCompleto{
@@ -28,10 +30,11 @@ body {
     #nomeCompleto{
         background-color: #EBEBEB;
         border:#FFFFFF;
-        border-radius: 4px;
+        border-radius: 15px;
         width: 300px;
         height: 50px;
         font-size: 20px;
+        text-align: center;
     }
   }
   .nascimento{
@@ -41,10 +44,11 @@ body {
     #nascimento{
         background-color: #EBEBEB;
         border:#FFFFFF;
-        border-radius: 4px;
+        border-radius: 15px;
         width: 300px;
         height: 50px;
         font-size: 20px;
+        text-align: center;
     }
   }
   .cpf{
@@ -54,10 +58,11 @@ body {
     #cpf{
         background-color: #EBEBEB;
         border:#FFFFFF;
-        border-radius: 4px;
+        border-radius: 15px;
         width: 300px;
         height: 50px;
         font-size: 20px;
+        text-align: center;
     }
   }
   .email{
@@ -67,7 +72,7 @@ body {
     #email{
         background-color: #EBEBEB;
         border:#FFFFFF;
-        border-radius: 4px;
+        border-radius: 15px;
         width: 300px;
         height: 50px;
         font-size: 20px;
@@ -81,10 +86,11 @@ body {
     #telefone{
         background-color: #EBEBEB;
         border:#FFFFFF;
-        border-radius: 4px;
+        border-radius: 15px;
         width: 300px;
         height: 50px;
         font-size: 20px;
+        text-align: center;
     }
   }
   /* div principais */
@@ -100,13 +106,27 @@ body {
     justify-content: center;
     background-color: #1D314D;
     width:100vw;
-    color: #ffffff;
     height: 150px;
+  }
+  .fotoPerfil img{
+    position: absolute;
+    top: 100px;
+    right: 45%;
+    display: block;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  .fotoPerfil span{
+    align-items: center;
+    margin-top: auto;
+    color: #ffffff;
   }
   #hamburguer{
     background-color:#374962;
     color: #FFFFFF;
-    display: none;
+    display: block;
     float:left;
     flex-direction: column;
     align-items: top;
@@ -132,13 +152,18 @@ body {
   #menuH{
     display: flex;
     flex-direction: row;
-    width: 4vw;
-    justify-content: left;
-    background-color: brown;
+    width: 2vw;
+    height: 13vh;
+    align-content: end;
+    background-color: #EBEBEB;;
     cursor: pointer;
   }
   .listaItens{
-    margin: 10px;
     list-style: none;
     justify-content: space-around;
+  }
+
+  .listaItens li{
+    /* espaço entre cada item da lista (li) */
+    padding: 0px 0px 15px 0px;
   }
