--- a/Sprint2/Algoritmos/tela-quem-somos/style.css
+++ b/Sprint2/Algoritmos/tela-quem-somos/style.css
@@ -1,6 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
@@ -24,9 +26,28 @@ h1 {
 }
 
 .box1 p {
-    margin: 10px;
-    padding: 0;
-    color: white; 
+        color: rgb(0, 0, 71);
+        background-color: white;
+        width: 100px;
+        height: 23px;
+        text-align: center;
+        margin: 10px;
+        padding: 0px;
+        border-width: initial;
+        border-style: solid;
+        border-color: initial;
+        border-image: initial;
+        border-radius: 10px;
+    } 
+
+.container p{
+    font-family: open-sans;
+    font-size: 20px;
+}
+.container h3{
+    font-size: 30px;
+    font-family: open-sans;
+    color: rgb(0, 0, 71);
 }
 
 .container{
@@ -37,7 +58,8 @@ h1 {
 .container h1{
     color: rgb(0, 0, 71);
     font-weight: bold;
-    font-size: xx-large;
+    font-size: 50px;
+    font-family: roboto;
 }
 
 .container h1{
@@ -56,51 +78,48 @@ h1 {
     margin-top: 10%;
 }
 
-.vertical-line {
-    width: 1px; 
-    height: 100px; 
-    border-left: 1px solid black; 
-
+.image02{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 17%; 
+    position: absolute;
+    left: 60%;
+    margin-bottom: 20%;
 }
-
 
 .image-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1px; 
-}
-
-.image-container img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.image-container {
-    display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    margin-top: 10px; 
-    margin-right: 10px; 
-
+    margin-top: 15%; 
+    position: absolute;
+    right: 35%;
+    
+    
 }
 
 
-footer {
-    background-color: rgb(161, 157, 157);
-    padding: 10px;
-    margin: 0;
-    display: flex;
-    align-items: center;    
-    margin-top: 10%;
-}
-footer h3{
-    margin-right: auto;
+
+.linha1 {
+    background-color: rgb(0, 0, 71);
+    width: 5px;
+    height: 300px;
+    position: absolute;
+    left: 56%;
 }
 
-footer p {
-    margin-right: 5px; 
-    margin: 10px;
+.segundalinha{
+    background-color: rgb(0, 0, 71);
+    width: 5px;
+    height: 300px;
+    position: absolute;
+    left: 68%;
 }
 
-
+@font-face{
+    font-family: open-sans;
+    src: url(Fontes/OpenSans-Regular.ttf);
+    font-family: roboto;
+    src: url(Fontes/Roboto-Regular.ttf);
+}
