--- a/Sprint2/Algoritmos/index/style.css
+++ b/Sprint2/Algoritmos/index/style.css
@@ -19,8 +19,10 @@ body {
 .header .container{
   display: flex;
   justify-content: space-between;
-  margin-left: 10px;
   width: 100%;
+  position: fixed;
+  background-color: #fff;
+  padding: 10px;
   
 }
 
@@ -54,7 +56,6 @@ body {
 .navbar li {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   margin: 8px; 
 }
 
@@ -80,6 +81,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 800px;
 
 }
 
