--- a/Sprint2/Algoritmos/tela-login/style.css
+++ b/Sprint2/Algoritmos/tela-login/style.css
@@ -1,7 +1,12 @@
+@font-face {
+    font-family: league-spartan;
+    src: url(../index/fontes/league-spartan/LeagueSpartan-Bold.otf);
+}
+
 body {
     margin: 0;
     padding: 0;
-    font-family: fantasy;
+    font-family: sans-serif;
     background-image: url(img/background.png);
 }
 
@@ -24,7 +29,11 @@ nav .container {
     justify-content: space-between;
 }
 
-.titulo, ul, span, input, button {
+.titulo {
+    font-family: league-spartan;
+}
+
+ul, span, input, button {
     font-weight: bold;
 }
 
@@ -37,7 +46,7 @@ nav .container {
     justify-content: space-between;
 }
 
-.navbar  ul, .navbar span {
+.navbar  ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -52,14 +61,13 @@ nav .container {
 .navbar ul {
     list-style: none;
     width: 150px;
-    margin-right: 100px;
 }
 
 .navbar, input, button {
     font-size: 16px;
 }
 
-.navbar span, .titulo {
+.titulo {
     font-size: 32px;
 }
 
@@ -84,7 +92,7 @@ main .container{
     align-items: center;
     width: 30%;
     height: 420px;
-    margin: 45px 0 20px 0;
+    margin: 10% 0 5% 0;
     padding: 10px 0;
 }
 
@@ -95,7 +103,7 @@ input {
     width: 75%;
     margin: 5px 0;
     padding-left: 10px;
-    font-family: fantasy;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
 }
 
@@ -106,7 +114,7 @@ input:focus {
 button {
     background-color: #1D314D;
     color: #fff;
-    font-family: fantasy;
+    font-family: sans-serif;
     font-weight: bold;
     border: none;
     height: 40px;
