--- a/Sprint2/Algoritmos/index/style.css
+++ b/Sprint2/Algoritmos/index/style.css
@@ -23,6 +23,7 @@ body {
   position: fixed;
   background-color: #fff;
   padding: 10px;
+  z-index: 3;
   
 }
 
@@ -50,7 +51,6 @@ body {
   align-items: center;
   font-weight: bold;
 
- 
 }
 
 .navbar li {
@@ -71,6 +71,8 @@ body {
   font-size: 15px;
   font-family: sans-serif;
   font-weight: 550;
+  cursor: pointer;
+
 }
 
 .banner{
@@ -131,6 +133,7 @@ body {
     height: 30px;
     width: 120px;
     border-style: solid;
+    cursor: pointer;
 
   }
 
@@ -144,10 +147,121 @@ body {
     border-style: solid;
 
     margin-left: 5%;
+    cursor: pointer;
+
+  }
+
+  .sobnos {
+    background-image: url('imagens/fundo_sobnos.png');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+  }
+  
+
+  .sobnos .container .quemsomos{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    position: relative;
+    top: 10%;
+  }
+
+  .sobnos .container h1{
+    color: rgb(0, 0, 71);
+    font-weight: bold;
+    font-size: 50px;
+    font-family: roboto;
+}
+
+  .sobnos .container p{
+    font-family: open-sans;
+    font-size: 20px;
+    color: black;
+    text-align: justify;
+    width: 80%;
+  }
+
+  .sobnos .container h3{
+    font-size: 30px;
+    font-family: open-sans;
+    color: rgb(0, 0, 71);
+  }
+
+  .sobnos .image02{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 17%; 
+    position: relative;
+    top: 100%;
+    margin-bottom: 20%;
+    left: -10%;
+    z-index: 1;
+}
+
+  .sobnos .image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      top: 100%;
+      z-index: 2;
+  }
+
+  .sobnos .linha1 {
+    background-color: rgb(0, 0, 71);
+    width: 15px;
+    height: 300px;
+    position: relative;
+    top: 120.6%;
+    left: 56%;
+}
+
+  .sobnos .segundalinha{
+      background-color: rgb(0, 0, 71);
+      width: 15px;
+      height: 300px;
+      position: relative;
+      top: 120.6%;
+      left: 68%;
+  }
+
+  .footer .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .footer .container .F1{
+    font-weight: 800;
+    font-weight: open-sans;
+    color: white;
+    background-color: #384c64;
+    width: 100%;
+  }
+
+  .footer .container .F2{
+    font-weight: 800;
+    font-weight: open-sans;
+    color: white;
+    background-color: #20344c;
+    width: 100%;
   }
 
   
+  
   @font-face {
     font-family: league-spartan;
-    src: url(fontes/league-spartan/LeagueSpartan-Bold.otf)
+    src: url(fontes/league-spartan/LeagueSpartan-Bold.otf);
+    
+  }
+
+  @font-face {
+    font-family: open-sans;
+    src: url(fontes/OpenSans-Regular.ttf);
+    
   }
