--- a/Sprint2/Algoritmos/Site/index/style.css
+++ b/Sprint2/Algoritmos/Site/index/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -13,6 +17,7 @@ body {
 .header a {
   text-decoration: none;
   color: #07272c;
+  scroll-behavior: smooth;
 }
 
 .container{
