Colocando margin no scroll da pg quem somos

--- a/Sprint2/Algoritmos/Site/index/style.css
+++ b/Sprint2/Algoritmos/Site/index/style.css
@@ -167,6 +167,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    scroll-margin-top: 80px;
   }
   
 
