--- a/Sprint2/Algoritmos/Site/index/style.css
+++ b/Sprint2/Algoritmos/Site/index/style.css
@@ -265,3 +265,69 @@ body {
     src: url(../fontes/OpenSans-Regular.ttf);
     
   }
+
+  .email{
+    height: 40px;
+    width: 40px;
+    
+  }
+
+  .facebook{
+    height: 40px;
+    width: 40px;
+    
+  }
+
+  .insta{
+    height: 40px;
+    width: 50px;
+    
+  }
+
+  .telefone{
+    height: 40px;
+    width: 40px;
+    
+  }
+
+  
+
+  .footer {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    flex-direction: column;
+    
+  }
+  
+  .F1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .contato{
+    font-family: open-sans;
+    font-size: large;
+  }
+
+  li{
+    font-size: larger;
+    margin-left: 8%;
+
+  }
+
+  .F2 ul{
+    list-style: none;
+  }
+
+
+
+ .F2{
+  display: flex;
+  justify-content: space-around;
+ }
+
+ .atendimento{
+  display: flex;
+ }
