--- a/Sprint2/Algoritmos/Telas_Individuais/Tela cadastro/FlowTech.css
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela cadastro/FlowTech.css
@@ -117,15 +117,39 @@ select:invalid {
     width: 50%;
 }
 
-
+.buttons
+{
+    justify-content: space-between;
+    
+}
 .enviar{
-    position: absolute;
-    width: 10%;
+    
+    width: 50%;
     padding: 10px;
-    margin-left: -5%;
-    margin-top: -3%;
     border-radius: 4PX;
+    background-color: #1D314D;
+    color: white;
+    border: none;
+    margin-left: 150px;
 
+    margin: 10px;
+    border-radius: 10px;
+}
+.enviar:hover
+{
+    background-color: #54657e;
+}
+.codigo 
+{
+    
+    background-color: #1D314D;
+    color: white;
+    border: none;
+    width: 50%;
+    height: 20%;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
 }
 
 
@@ -135,7 +159,7 @@ select:invalid {
     text-transform: uppercase;
     letter-spacing: 4px;
     font-weight: bold;
-    font-family: League-Spartan;
+    font-family: /*League-Spartan*/ Arial, Helvetica, sans-serif;
 }
 
 .nav {
