links na nav bar da pg da dash e botoes na pg de perfil

--- a/Sprint2/Algoritmos/Telas_Individuais/Tela DeshBoard/Dash.css
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela DeshBoard/Dash.css
@@ -33,6 +33,11 @@ body {
   width: 350px;
   list-style: none;
 }
+
+.itensNaveBar a{
+  text-decoration: none;
+  color: #1D314D;
+}
 .titulo{
   color:#1D314D;
   margin-left: 50px;
