--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:#FFFFFF;
+    overflow-y: hidden;
   }
 .container{
   display: flex;
@@ -19,8 +20,8 @@ body {
   flex-direction: column;
   align-items: top;
   width: 20%;
-  height: 22%;
-  padding-block-end: 50%;
+  height: 0%;
+  padding-block-end: 44%;
   position: absolute;
   z-index: 3;
 }
@@ -74,15 +75,14 @@ body {
 }
 
 .box-title{
-  margin-left: 25%;
-  
+  margin-left: 21%;
 }
 .linha{
-  font-size: 15px;
+  font-size: 40px;
   font-style: inherit;
   font: bold;
   display: flex;
-  margin: 0 0 0% 47%;
+  margin: 0 0 0% 30%;
   align-items: center;
   text-align: center;
 }
@@ -129,7 +129,6 @@ body {
   height: 200px;
   width: 700px;
   justify-content: space-evenly;
-  overflow-x: hidden;
 }
 .box-estacoes p{
   writing-mode: vertical-rl;
@@ -147,8 +146,8 @@ body {
 .container_switch{
     width: 50%;
     height: 155px;
-    margin: 0 0 0 25%;
-    background-color: lightgrey;
+    margin: 0 0 0 28%;
+
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -156,19 +155,39 @@ body {
 }
 .box-grafico{
     width: 180px;
-    height: 100%;
-    border-radius: 10px;
-    background-color: #374962;
-    text-align: center;
-    color:white;
+    height: 99%;
+    border-radius: 14px;
     display: flex;  
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    border: 2px solid rgb(0, 0, 0);
+    text-align: center;
+    color:#1D314D;
+    font-weight: bold;
   }
+
+  .E {
+    background-color: #07CF1A;
+    border-radius: 14px;
+    padding-bottom: 0px;
+  }
+
+  .M {
+    background-color: #4EE888;
+    border-radius: 14px;
+    padding-bottom: 0px;
+  }
+
+  .D {
+    background-color: #C2E806;
+    border-radius: 14px;
+    padding-bottom: 0px;
+  }
+
   .box-grafINTERNO{
     width: 180px;
-    height: 60%;
+    height: 40%;
     border-radius: 10px;
     background-color: #1D314D;
     text-align: center;
@@ -177,6 +196,8 @@ body {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    font-size: 20px;
+    border-radius: 10px 10px 0px 0px;
   }
   
   /* Definindo o design das CheckBox */ 
@@ -186,53 +207,7 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-  }
-  
-  .switch .switch-wrapper {
-    display: flex;
-    width: 60px;
-    height: 34px;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .switch .switch-wrapper {
-    top: 0%;
-    left: 2%;
-    right: 20%;
-    bottom: 20;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 40px;
-    background-color: #1D314D;
-  }
-  
-  .switch .switch-wrapper input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .switch .switch-wrapper .switch-button::before {
-    content: "";
-    width: 26px;
-    height: 26px;
-    position: absolute;
-    left: 4px;
-    bottom: 4px;
-    border-radius: 50%;
-    transition: .4s all ease;
-    background-color: #FFFFFF;
-  }
-  
-  .switch .switch-wrapper input:checked + .switch-button::before {
-    background-color: chartreuse;
-  }
-  
-  .switch .switch-wrapper input:checked + .switch-button::before {
-    transform: translate(26px);
+    font-family: league-spartan;
   }
   
   /* Estilização específica para a checkbox customizada */
@@ -262,4 +237,23 @@ body {
   .imagem {
     max-width: 100px;
     height: auto;
+  }
+
+
+  h6.subtitle2 {
+    margin-top: 0px;
+    color: #1D314D;
+  }
+
+  h2.title2 {
+    margin-bottom: 0px;
+    color: #1D314D;
+    font-size: 35px;
+    margin-top: 0px;
+  }
+
+  @font-face {
+    font-family: league-spartan;
+    src: url(../fontes/league-spartan/LeagueSpartan-Bold.otf);
+    
   }
