--- a/Sprint2/Algoritmos/Site/Tela_Perfil/style.css
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     background-color:#FFFFFF;
   }
   /* classes dos campos de inserção de dados */
@@ -171,6 +171,7 @@ body {
   .listaItens{
     list-style: none;
     justify-content: space-around;
+    padding: 40px 0px 0px 40px;
   }
 
   .listaItens li{
