--- a/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
@@ -1,7 +1,11 @@
+@font-face{
+  font-family: league-spartan;
+  src: url(../fontes/league-spartan/LeagueSpartan-Bold.otf)
+}
+
 body {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     background-color:#FFFFFF;
   }
   /* classes dos campos de inserção de dados */
@@ -140,7 +144,6 @@ body {
     color:#1D314D;
     width: 350px;
     list-style: none;
-    font-family: league-spartan;
   }
 
   .itensNaveBar a{
@@ -149,14 +152,10 @@ body {
   }
 
   .titulo{
-    font-family: league-spartan;
     color:#1D314D;
     margin-left: 50px;
   }
-  @font-face{
-    font-family: league-spartan;
-    src: url(../index/fontes/league-spartan/LeagueSpartan-Bold.otf)
-  }
+
   #menuH{
     display: flex;
     flex-direction: row;
@@ -174,9 +173,14 @@ body {
     padding: 40px 0px 0px 40px;
   }
 
+  .listaItens a{
+    text-decoration: none;
+    color:#FFFFFF;
+  }
+
   .listaItens li{
     /* espaço entre cada item da lista (li) */
-    padding: 0px 0px 15px 0px;
+    padding: 0px 0px 30px 0px;
   }
 
   /* alinhamento - foto perfil */
@@ -195,7 +199,28 @@ body {
 
   .botoes {
     display: flex;
-    justify-content: end;
+    justify-content:space-around;
+    width: 100%;
+  }
+
+  .alterar{
+    background-color: #1D314D;
+    border-radius: 15px;
+    border: #FFFFFF;
+    font-size: 20px;
+    color: #FFFFFF;
+    width: 150px;
+    height: 50px;
+  }
+
+  .salvar{
+    background-color: #1D314D;
+    border-radius: 15px;
+    border: #FFFFFF;
+    font-size: 20px;
+    color: #FFFFFF;
+    width: 150px;
+    height: 50px;
   }
 
   .separacaoBotao{
