--- a/Sprint2/Algoritmos/Site/cadastro/style.css
+++ b/Sprint2/Algoritmos/Site/cadastro/style.css
@@ -36,7 +36,7 @@ nav .container {
     font-family: league-spartan;
 }
 
-ul, span, input, buttonson {
+ul, span, input, .buttons {
     font-weight: bold;
 }
 
@@ -77,7 +77,7 @@ ul, span, input, buttonson {
     width: 150px;
 }
 
-.navbar, input, enviaron {
+.navbar, input, .enviaron {
     font-size: 16px;
 }
 
@@ -100,7 +100,7 @@ a {
     height: fit-content;
 }
 
-.telaLogin .form, input, enviaron {
+.telaLogin .form, input, .enviaron {
     border-radius: 10px;
 }
 
@@ -129,7 +129,7 @@ a {
     outline: none;
 }
 
-.telaLogin enviaron {
+.telaLogin .enviaron {
     background-color: #1D314D;
     color: #fff;
     font-family: sans-serif;
@@ -140,7 +140,7 @@ a {
     margin: 30px 0 10px 0;
 }
 
-.telaLogin enviaron:hover {
+.telaLogin .enviaron:hover {
     background-color: #144b97 ;
     cursor: pointer;
 }
@@ -183,7 +183,7 @@ a {
 
 }
 
-.telaCadastro .enviarons {
+.telaCadastro .enviaron {
     margin-left: -6%;
     display: flex;
     justify-content: space-around;
@@ -270,6 +270,7 @@ a {
     border-radius: 4px;
     box-sizing: border-box;
 }
+
 
 .telaCadastro .bloco2 {
     width: 90%;
