--- a/Sprint2/Algoritmos/Site/graficos/Dash.css
+++ b/Sprint2/Algoritmos/Site/graficos/Dash.css
@@ -4,6 +4,8 @@ body {
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:#FFFFFF;
+    overflow-y: visible;
+    overflow-x: visible;
   }
 .container{
   display: flex;
@@ -19,7 +21,7 @@ body {
   flex-direction: column;
   align-items: top;
   width: 20%;
-  height: 22%;
+  height: auto;
   padding-block-end: 50%;
   position: absolute;
   z-index: 3;
@@ -33,11 +35,6 @@ body {
   width: 350px;
   list-style: none;
 }
-
-.itensNaveBar a{
-  text-decoration: none;
-  color: #1D314D;
-}
 .titulo{
   color:#1D314D;
   margin-left: 50px;
@@ -48,7 +45,7 @@ body {
   width: 2vw;
   margin-top: 18px;
   margin-left: 5px;
-  height: 8vh;
+  height: auto;
   align-content: center;
   justify-content: center;
   background-color: #EBEBEB;;
@@ -66,6 +63,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 30px;
+  margin-left: 0;
 }
 .fotoPerfil img{
   width: 100px;
@@ -129,7 +127,6 @@ body {
   height: 200px;
   width: 700px;
   justify-content: space-evenly;
-  overflow-x: hidden;
 }
 .box-estacoes p{
   writing-mode: vertical-rl;
@@ -259,7 +256,4 @@ body {
   
   /* Editando o tamanho de exibição das imagens. */
 
-  .imagem {
-    max-width: 100px;
-    height: auto;
-  }
+ 
