--- a/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
@@ -133,7 +133,7 @@ body {
     width: 20%;
     height: 50px;
     padding-block-end: 100%;
-    top: 80px;
+    top: 100%;
     padding-block-end: 34.2%;
   }
   .itensNaveBar {
