--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -63,15 +63,21 @@ body {
   /* espaço entre cada item da lista (li) */
   padding: 0px 0px 20px 0px;
 }
+
+.listaItens a{
+  text-decoration: none;
+  color: #EBEBEB;
+}
+
 .fotoPerfil{
   display: flex;
-  justify-content: center;
   margin: 30px;
 }
 .fotoPerfil img{
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  margin-left: 12%;
 }
 
 .box-title{
