--- a/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
+++ b/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
@@ -5,7 +5,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:#FFFFFF;
     overflow-y: visible;
-    overflow-x: visible;
   }
 .container{
   display: flex;
@@ -136,6 +135,7 @@ body {
   height: 200px;
   width: 700px;
   justify-content: space-evenly;
+  overflow-x: hidden;
 }
 .box-estacoes p{
   writing-mode: vertical-rl;
