--- a/Sprint2/Algoritmos/Telas_Individuais/Tentativa-HeatMap/Dash.css
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tentativa-HeatMap/Dash.css
@@ -92,7 +92,9 @@ h2.title2 {
   width: 850px;
   background-image: url(fundo.png);
   background-size: cover;
+  margin-left: 5%;
 }
+
 
 
   @font-face {
