--- a/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
+++ b/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
@@ -265,4 +265,14 @@ body {
   
   /* Editando o tamanho de exibição das imagens. */
 
- 
+ .temporeal{
+  background-color: #1D314D;
+    border-radius: 15px;
+    border: #FFFFFF;
+    font-size: 20px;
+    color: #FFFFFF;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    margin-left: 80%;
+ }
