--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -176,19 +176,19 @@ body {
   }
 
   .E {
-    background-color: #07CF1A;
+    background-color: #41BB4D;
     border-radius: 14px;
     padding-bottom: 0px;
   }
 
   .M {
-    background-color: #4EE888;
+    background-color: #41BB4D;
     border-radius: 14px;
     padding-bottom: 0px;
   }
 
   .D {
-    background-color: #C2E806;
+    background-color: #FF3131;
     border-radius: 14px;
     padding-bottom: 0px;
   }
