mapa de calor e atualizando alerts

--- a/Sprint2/Algoritmos/Site/heatmap/Dash.css
+++ b/Sprint2/Algoritmos/Site/heatmap/Dash.css
@@ -90,7 +90,7 @@ h2.title2 {
 .heatmap {
   height: 490px;
   width: 850px;
-  background-image: url(fundo.png);
+  background-image: url(Planta_Paulista.png);
   background-size: cover;
   margin-left: 5%;
 }
