--- a/Sprint2/Algoritmos/Site/index/style.css
+++ b/Sprint2/Algoritmos/Site/index/style.css
@@ -28,19 +28,25 @@ body {
 
 .header .container{
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   position: fixed;
   background-color: #fff;
   padding: 10px;
   z-index: 3;
   border-bottom: 2px solid #07272c;
+  height: 82px;
   
 }
 
 .titulo{
   color: #0a3339;
   font-family: league-spartan;
+  margin-left: 50px;
+  margin-right: 200px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 
@@ -53,6 +59,7 @@ body {
   color: #07272c;
   align-items: center;
   font-weight: bold;
+  font-family: sans-serif;
 
 }
 
