--- a/Sprint2/Algoritmos/Site/cadastro/style.css
+++ b/Sprint2/Algoritmos/Site/cadastro/style.css
@@ -41,15 +41,15 @@ body:hover {
     padding: 10px;
     z-index: 3;
     border-bottom: 2px solid #07272c;
-    height: 82px;
+    height: 11vh;
 
 }
 
 .titulo1 {
     color: #0a3339;
     font-family: league-spartan;
-    margin-left: 50px;
-    margin-right: 200px;
+    margin-left: 6vw;
+    margin-right: 14vw;
     margin-top: 0;
     margin-bottom: 0;
 }
