--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -6,6 +6,99 @@ body {
     background-color:#FFFFFF;
     overflow-y: hidden;
   }
+
+  .header1 {
+    display: flex;
+    flex-wrap: nowrap;
+
+}
+
+.header1 a {
+    text-decoration: none;
+    color: #07272c;
+    scroll-behavior: smooth;
+}
+
+.container1 {
+    display: flex;
+    width: 80%;
+    margin: auto;
+}
+
+.header1 .container1 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100vw;
+    position: fixed;
+    background-color: #fff;
+    padding: 10px;
+    z-index: 3;
+    border-bottom: 2px solid #07272c;
+    height: 11vh;
+
+}
+
+.titulo1 {
+    color: #0a3339;
+    font-family: league-spartan;
+    margin-left: 4vw;
+    margin-right: 14vw;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.container {
+    display: flex;
+    width: 95%;
+    margin: auto;
+    padding: 10px;
+}
+
+.navbar1 {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    color: #07272c;
+    align-items: center;
+    font-weight: bold;
+    font-family: sans-serif;
+
+}
+
+.navbar1 li {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+    font-size: 19.2px;
+}
+
+.navbar1 .quem {
+    margin-right: 0px;
+}
+
+.navbar1 .bt1 {
+    background-color: #07272c;
+    color: #fff;
+    padding: 8px 35px;
+    border-radius: 50px;
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: 550;
+    cursor: pointer;
+}
+
+.navbar .bt1 a {
+    color: #fff;
+}
+
+.gap {
+  width: 11vw;
+  height: 11vh;
+  padding: 10px;
+}
+
 .container{
   display: flex;
   width: 100%;
@@ -19,11 +112,10 @@ body {
   float:left;
   flex-direction: column;
   align-items: top;
-  width: 20%;
-  height: 0%;
-  padding-block-end: 44%;
-  position: absolute;
+  width: 20vw;
   z-index: 3;
+  height: 89vh;
+  border: 2px solid #07272c;
 }
 .itensNaveBar {
   display:flex;
@@ -48,8 +140,7 @@ body {
   flex-direction: row;
   width: 2vw;
   height: 30%;
-  margin-top: 2%;
-  background-color: #EBEBEB;
+  background-color: #FFFFFF;
   color: #1D314D;
   cursor: pointer;
   justify-content: center;
@@ -80,14 +171,15 @@ body {
 }
 
 .box-title{
-  margin-left: 21%;
+  margin-left: 2%;
 }
 .linha{
   font-size: 40px;
   font-style: inherit;
   font: bold;
   display: flex;
-  margin: 0 0 0% 30%;
+  justify-content: center;
+  margin-left: -7%;
   align-items: center;
   text-align: center;
 }
@@ -110,6 +202,18 @@ body {
   width: 10px;
   height: 10px;
   margin: 0 0 0 20%;
+}
+
+.main_conteudo {
+  width: 100vw;
+  display: flex;
+  height: 89vh;
+}
+
+.itens_principais {
+  height: 89vh;
+  display: block;
+  width: 100vw;  
 }
 
 /* Manipulando a Box onde estão os radio buttons de cada Estação */
@@ -150,16 +254,23 @@ body {
 
 .container_dados{
     display: flex;
+    justify-content: center;
 }
+
+
+
 .params {
   width: 50%;
     height: 155px;
-    margin: 0 0 0 28%;
-
     border-radius: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: top;
+}
+
+.gap2 {
+  width: 4vw;
+  height: 100%;
 }
 .box-grafico{
     width: 180px;
@@ -257,10 +368,12 @@ body {
   }
 
   .flecha{
+    display: flex;
+    justify-content: center;
     position: relative;
     top: -30px;
     z-index: 1;
-    margin-left: 130px;
+
   }
   .legenda{
     display: flex;
@@ -275,6 +388,7 @@ body {
     display: flex;
     justify-content: center;
     z-index: 2;
+    margin-left: -8%;
   }
 
   .legenda .quadrados p{
