--- a/Sprint2/Algoritmos/Site/dashboard/Dash.css
+++ b/Sprint2/Algoritmos/Site/dashboard/Dash.css
@@ -454,6 +454,7 @@ body {
     height: 40px;
     width: 130px;
     font-size: 17px;
+    margin-top: 30px;
   }
   @font-face {
     font-family: league-spartan;
