Termos de Uso e Politica de privacidade

--- a/Sprint2/Algoritmos/Site/index/style.css
+++ b/Sprint2/Algoritmos/Site/index/style.css
@@ -20,6 +20,11 @@ body {
   scroll-behavior: smooth;
 }
 
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 .container{
   display: flex;
   width: 80%;
