--- a/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/perfil.css
@@ -1,14 +1,102 @@
-@font-face{
-  font-family: league-spartan;
-  src: url(../fontes/league-spartan/LeagueSpartan-Bold.otf)
-}
-
 body {
     margin: 0;
     padding: 0;
     background-color:#FFFFFF;
     overflow-y: hidden;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+  /* Classes da navbar */
+  .header1 {
+    display: flex;
+    flex-wrap: nowrap;
+
+}
+
+.header1 a {
+    text-decoration: none;
+    color: #07272c;
+    scroll-behavior: smooth;
+}
+
+.container1 {
+    display: flex;
+    width: 80%;
+    margin: auto;
+}
+
+.header1 .container1 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100vw;
+    position: fixed;
+    background-color: #fff;
+    padding: 10px;
+    z-index: 3;
+    border-bottom: 2px solid #07272c;
+    height: 6vh;
+
+}
+
+.titulo1 {
+    color: #0a3339;
+    font-family: league-spartan;
+    margin-left: 4vw;
+    margin-right: 14vw;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.container {
+    display: flex;
+    width: 95%;
+    margin: auto;
+    padding: 10px;
+}
+
+.navbar1 {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    color: #07272c;
+    align-items: center;
+    font-weight: bold;
+    font-family: sans-serif;
+
+}
+
+.navbar1 li {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+    font-size: 19.2px;
+}
+
+.navbar1 .quem {
+    margin-right: 0px;
+}
+
+.navbar1 .bt1 {
+    background-color: #07272c;
+    color: #fff;
+    padding: 8px 35px;
+    border-radius: 50px;
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: 550;
+    cursor: pointer;
+}
+
+.navbar .bt1 a {
+    color: #fff;
+}
+
+.gap {
+  width: 11vw;
+  height: 6vh;
+  padding: 10px;
+}
   /* classes dos campos de inserção de dados */
   .campos{
     display: flex;
@@ -162,8 +250,7 @@ body {
     flex-direction: row;
     width: 2vw;
     height: 30%;
-    margin-top: 2%;
-    background-color: #EBEBEB;
+    background-color: #FFFFFF;
     color: #1D314D;
     cursor: pointer;
     justify-content: center;
@@ -172,7 +259,7 @@ body {
   .listaItens{
     list-style: none;
     justify-content: space-around;
-    padding: 40px 0px 0px 40px;
+    padding: 11vh 0px 0px 40px;
   }
 
   .listaItens a{
@@ -232,4 +319,16 @@ body {
     flex-direction: row;
     justify-content: space-around;
     margin: 0 0 40px;
+  }
+
+  @font-face {
+    font-family: league-spartan;
+    src: url(../fontes/league-spartan/LeagueSpartan-Bold.otf);
+    
+  }
+
+  @font-face {
+    font-family: roboto;
+    src: url(../fontes/Roboto-Regular.ttf);
+    
   }
