--- a/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
+++ b/Sprint2/Algoritmos/Site/graficos/graficos_dash.css
@@ -37,7 +37,7 @@ body {
     padding: 10px;
     z-index: 3;
     border-bottom: 2px solid #07272c;
-    height: 11vh;
+    height: 6vh;
 
 }
 
@@ -97,7 +97,7 @@ body {
 
 .gap {
   width: 11vw;
-  height: 11vh;
+  height: 6vh;
   padding: 10px;
 }
 
@@ -117,7 +117,7 @@ body {
   align-items: top;
   width: 20%;
   height: auto;
-  padding-block-end: 50%;
+  /* padding-block-end: 50%; */
 
 }
 .itensNaveBar {
@@ -135,13 +135,14 @@ body {
 }
 #menuH{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 2vw;
-  height: 30%;
-  background-color: white;
-  color: #1D314D;
-  cursor: pointer;
+  margin-left: 5px;
+  height: 6vh;
+  align-content: center;
   justify-content: center;
+  background-color: white;;
+  cursor: pointer;
 }
 .listaItens{
   list-style: none;
