--- a/Sprint2/Algoritmos/Site/heatmap/Dash.css
+++ b/Sprint2/Algoritmos/Site/heatmap/Dash.css
@@ -6,6 +6,100 @@ body {
     background-color:#FFFFFF;
     overflow-y: hidden;
   }
+
+  .header1 {
+    display: flex;
+    flex-wrap: nowrap;
+
+}
+
+.header1 a {
+    text-decoration: none;
+    color: #07272c;
+    scroll-behavior: smooth;
+}
+
+.container1 {
+    display: flex;
+    width: 80%;
+    margin: auto;
+}
+
+.header1 .container1 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100vw;
+    position: fixed;
+    background-color: #fff;
+    padding: 10px;
+    z-index: 3;
+    border-bottom: 2px solid #07272c;
+    height: 6vh;
+
+}
+
+.titulo1 {
+    color: #0a3339;
+    font-family: league-spartan;
+    margin-left: 4vw;
+    margin-right: 14vw;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.container {
+    display: flex;
+    width: 95%;
+    margin: auto;
+    padding: 10px;
+}
+
+.navbar1 {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    color: #07272c;
+    align-items: center;
+    font-weight: bold;
+    font-family: sans-serif;
+
+}
+
+.navbar1 li {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+    font-size: 19.2px;
+}
+
+.navbar1 .quem {
+    margin-right: 0px;
+}
+
+.navbar1 .bt1 {
+    background-color: #07272c;
+    color: #fff;
+    padding: 8px 35px;
+    border-radius: 50px;
+    font-size: 15px;
+    font-family: sans-serif;
+    font-weight: 550;
+    cursor: pointer;
+}
+
+.navbar .bt1 a {
+    color: #fff;
+}
+
+.gap {
+  width: 11vw;
+  height: 6vh;
+  padding: 10px;
+}
+
+
 .container{
   display: flex;
   width: 100%;
@@ -46,12 +140,11 @@ body {
   display: flex;
   flex-direction: column;
   width: 2vw;
-  margin-top: 18px;
   margin-left: 5px;
-  height: 8vh;
+  height: 6vh;
   align-content: center;
   justify-content: center;
-  background-color: #EBEBEB;;
+  background-color: white;;
   cursor: pointer;
 }
 .listaItens{
